1999-05-13  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * spvw.d (init_symbol_values): Don't call a function here, too early.
          (initmem): Call SYS::SET-ANSI here.

1999-05-13  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

         * lispbibl.d (stream_fd): Move declaration.
         * stream.d (stream_fd): Move function.

1999-05-13  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Finish Sam's 1999-04-07 patch.
        * eval.d (check_for_illegal_keywords): Remove misplaced symbolp test.
        * defmacro.lsp (analyze-key): Use symbolp instead of keywordp.
        * compiler.lsp (test-argument-syntax): Likewise.
          (kvalue-form-index): Likewise.
        * conditio.lsp (expand-restart-case): Likewise.
        * error.d (SYSTEM::CERROR-OF-TYPE, SYSTEM::ERROR-OF-TYPE): Likewise.

1999-05-13  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Followup to Sam's 1999-04-07 patch.
        * eval.d (eval1): Treat arrays as self-evaluating in all cases.
        * compiler.lsp (l-constantp, c-constantp, c-constant-value): Treat
          arrays as constants.

1999-05-08  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * trace.lsp (trace1): No need to use replace-in-fenv.
          (replace-in-fenv): Remove function.

1999-05-12  Sam Steingold  <sds@goems.com>

	* format.lsp (format-integer): (format nil "~@d" 0) => "+0"

1999-05-12  Sam Steingold  <sds@goems.com>

	* loop.lsp (expand-loop): put `then-form' into `stepafter' even
	when it's the same constant as `first-form'.

1999-05-09  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * aclocal.m4 (CL_SIGNAL_UNBLOCK, CL_SIGNAL_BLOCK_OTHERS,
           CL_SIGACTION_UNBLOCK): Perform the test if either POSIX or BSD
          signal mask primitives are available. Otherwise,
          SIGACTION_NEED_UNBLOCK would not be defined on Solaris.

1999-05-07  Sam Steingold  <sds@goems.com>

	* describe.lsp (*apropos-do-more*): new variable.
	(apropos): use it.
